--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="neon-grid"></div>
@@ -106,9 +106,9 @@
   </main>
 
   <footer>
-    <p>Data: TMDB · Questions: OpenRouter · Built for localhost</p>
+    <p>“Step In. Sync Up. Level Up.”</p>
   </footer>
 
-  <script type="module" src="js/script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
